Added Query to ChannelController & Modified YoutubeVideo Queries
